# grf

./: .gitignore  2d-game-engine-plan.md  CLAUDE.md  Cargo.toml
.claude/agents/: rust-ecs-architect.md  rust-game-debugger.md  rust-render-specialist.md
assets/data/: items.toml  npcs.toml
assets/data/characters/: player.toml
assets/dialogues/: pierre_intro.json  robin_intro.json
assets/maps/: collision_test.json  grass_test.json  house.json  test.json
backlog/: config.yml  task-001 - Setup workspace Cargo.md  task-002 - Creation fenetre avec winit.md  task-003 - Initialisation wgpu et premier triangle.md  task-004 - Sprite rendering basique.md  task-005 - Game loop avec fixed timestep.md  task-006 - Input system clavier.md  task-007 - Camera 2D basique.md  task-008 - Tilemap loading et rendering.md  task-009 - Multi-layer tilemaps et z-ordering.md  task-010 - Collision AABB et spatial grid.md  task-011 - Tile-based collision map.md  task-012 - Transitions entre maps.md  task-013 - Animation system.md  task-014 - Implementation ECS custom.md  task-015 - Refactoring vers ECS.md  task-016 - Resource manager et asset loading.md  task-017 - Audio system avec rodio.md  task-018 - Systeme de temps in-game.md  task-019 - Cycle journuit visuel.md  task-020 - Systeme d'inventaire.md  task-021 - Item definitions et data loading.md  task-022 - Systeme de farming - planter.md  task-023 - Systeme de farming - arrosage et croissance.md  task-024 - Systeme de farming - recolte.md  task-025 - NPCs basiques.md  task-026 - Systeme de dialogue.md  task-027 - Integration egui et debug overlay.md  task-028 - Collision visualizer.md  task-029 - Z-order debug et layer visualization.md  task-030 - Entity Inspector ECS.md  task-031 - Performance profiler.md  task-032 - Event Log system.md  task-033 - Debug Console avec commandes.md  task-034 - UI in-game basique.md  task-035 - SaveLoad system.md  task-036 - Menu principal.md  task-037 - Pause menu.md  task-038 - Settings menu.md  task-039 - Polish et optimisations.md  (+3 more)
crates/engine_assets/: Cargo.toml
crates/engine_assets/src/: lib.rs
crates/engine_audio/: Cargo.toml
crates/engine_audio/src/: lib.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: game_clock.rs  lib.rs  settings.rs  time.rs
crates/engine_debug/: Cargo.toml
crates/engine_debug/src/: egui_renderer.rs  lib.rs  overlay.rs
crates/engine_ecs/: Cargo.toml
crates/engine_ecs/src/: lib.rs
crates/engine_input/: Cargo.toml
crates/engine_input/src/: input.rs  keyboard.rs  lib.rs
crates/engine_physics/: Cargo.toml
crates/engine_physics/src/: lib.rs
crates/engine_render/: Cargo.toml
crates/engine_render/src/: animation.rs  camera.rs  character.rs  day_night.rs  lib.rs  renderer.rs  sprite.rs  stats.rs  texture.rs  tilemap.rs
crates/engine_render/src/shaders/: sprite.wgsl  triangle.wgsl
crates/engine_ui/: Cargo.toml
crates/engine_ui/src/: hud.rs  lib.rs  menu.rs  settings_menu.rs
crates/engine_window/: Cargo.toml
crates/engine_window/src/: lib.rs  window.rs
docs/: README.md  engine_assets.md  engine_audio.md  engine_core.md  engine_debug.md  engine_ecs.md  engine_input.md  engine_physics.md  engine_render.md  engine_ui.md  engine_window.md
game/: Cargo.toml
game/assets/Tilesets/: Tileset Grass Summer.tsx  Tilled Soil and wet soil.tsx  Water Ground animations tiles.tsx  summer.tsx  test.json  test.tiled-session  test.tmx
game/src/: components.rs  dialogue.rs  farming.rs  inventory.rs  items.rs  main.rs  menu.rs  npc.rs  player.rs  systems.rs
game/src/save/: mod.rs  save_data.rs  save_manager.rs
