[workspace]
resolver = "2"
members = [
    "crates/engine_core",
    "crates/engine_window",
    "crates/engine_render",
    "crates/engine_input",
    "crates/engine_audio",
    "crates/engine_ecs",
    "crates/engine_physics",
    "crates/engine_assets",
    "crates/engine_ui",
    "crates/engine_debug",
    "game",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jean-Marc"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Window and events
winit = "0.29"

# GPU abstraction
wgpu = "0.19"

# Math
glam = "0.25"

# GPU data casting
bytemuck = { version = "1.14", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Audio
rodio = "0.17"

# Images
image = "0.24"

# Time
instant = "0.1"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime (minimal, for wgpu init)
pollster = "0.3"

# Debug UI (optional)
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
egui_plot = "0.27"

# Internal crates
engine_core = { path = "crates/engine_core" }
engine_window = { path = "crates/engine_window" }
engine_render = { path = "crates/engine_render" }
engine_input = { path = "crates/engine_input" }
engine_audio = { path = "crates/engine_audio" }
engine_ecs = { path = "crates/engine_ecs" }
engine_physics = { path = "crates/engine_physics" }
engine_assets = { path = "crates/engine_assets" }
engine_ui = { path = "crates/engine_ui" }
engine_debug = { path = "crates/engine_debug" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
